# semtle-web-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  fastapi.db  main.py  pyproject.toml  requirements.txt  test_code.py
data/: sample.txt
docs/: sample.md
documents/: 배포참고사항.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/ApiURL/: ApiURL.js
frontend/src/components/Header/: Navbarboot.js
frontend/src/pages/Board/: Board.css  Boardcreate.js  Boardlist.js  Boardview.js  CommonTable.css  Stackboot.js
frontend/src/pages/Login/: Login.jsx  Login.module.css
frontend/src/pages/Main/: Main.js
frontend/src/pages/membership/: Membership.jsx
frontend/src/pages/root/: Root.jsx  Root.module.css
src/: main.py
src/api/v1/: __init__.py
src/api/v1/Free_Board/: Free_Board_ctl.py  Free_Board_dao.py  Free_Board_dto.py  Free_Board_svc.py
src/api/v1/Free_Board_Comment/: Free_Board_Comment_ctl.py  Free_Board_Comment_dao.py  Free_Board_Comment_dto.py  Free_Board_Comment_svc.py
src/api/v1/Study_Board/: Study_Board_ctl.py  Study_Board_dao.py  Study_Board_dto.py  Study_Board_svc.py
src/api/v1/Study_Board_Comment/: Study_Board_Comment_ctl.py  Study_Board_Comment_dao.py  Study_Board_Comment_dto.py  Study_Board_Comment_svc.py
src/api/v1/admin_board/: admin_board_control.py  admin_board_ctl.py
src/api/v1/auth/: auth_ctl.py  (+6 more)
src/api/v1_ewha/: __init__.py
src/core/: __init__.py  config.py  cors.py  error.py  event.py  router.py  security.py  status.py  type.py
src/database/: models.py  models_e-wa.py  models_hongsi.py  session.py
src/dependencies/: auth.py
src/lib/: dto.py  security.py  status.py  tools.py  type.py
src/schema/: dto.py  models.py  session.py
src/var/: models.py  session.py
(+171 files in other folders)
