[tool.poetry]
name = "semtle-web-dev"
version = "0.1.0"
description = ""
authors = ["taehwan heo <htth815@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
sqlalchemy = "^2.0.29"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
psycopg2-binary = "^2.9.9"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
email-validator = "^2.1.1"
passlib = "^1.7.4"
bcrypt = "^4.1.3"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
